# taskRecorder

./: CMakeLists.txt  README.md  taskRecorder.cpp  taskRecorder.h  taskRecorder_main.cpp
application/: recordTasks.xml
examples_data/: leftarm_1.record  leftarm_1.record.info
